@startuml

title __COMPANY's Class Diagram__\n

  namespace com.StockExchangeModel {
    namespace StockExchange {
      namespace Company {
        class com.StockExchangeModel.StockExchange.Company.CompanyActionHandler {
            + CompanyActionHandler()
            + handleAction()
        }
        class com.StockExchangeModel.StockExchange.Company.Company {
            ~ categoryIndex : int
            {static} ~ categoryList : String[]
            ~ name : String
            + Company()
            + getCategory()
            + getCategoryIndex()
            + getName()
            + getStock()
            + setCategoryIndex()
            + setName()
            + setStock()
            + toString()
            {static} ~ getCategoryIndex()
        }
        class com.StockExchangeModel.StockExchange.Company.Stock {
            ~ closePrice : double
            ~ highPrice : double
            ~ lowPrice : double
            ~ openPrice : double
            ~ ticker : String
            + Stock()
            + equals()
            + getClosePrice()
            + getHighPrice()
            + getLowPrice()
            + getLowerCircuit()
            + getOpenPrice()
            + getTicker()
            + getUpperCircuit()
            + hashCode()
            + setClosePrice()
            + setHighPrice()
            + setLowPrice()
            + setOpenPrice()
            + setTicker()
            + toString()
        }
      }
    }
  }
  

  com.StockExchangeModel.StockExchange.Company.Company o-- com.StockExchangeModel.StockExchange.Company.Stock : stock
  com.StockExchangeModel.StockExchange.Company.CompanyActionHandler -up-|> com.StockExchangeModel.StockExchange.Interpreter.ActionHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
